<resources>
    <string name="app_name">StepForm</string>
    <string name="name_text">Name</string>
    <string name="lastname_text">Lastname</string>
    <string name="age_text">Age</string>
    <string name="email_text">Email</string>
    <string name="e_g_douglas_text">e.g. Douglas</string>
    <string name="e_g_hernandez_text">e.g. Hernández</string>
    <string name="e_g_23_text">e.g. 23</string>
    <string name="e_g_email_text">e.g. 00004516@uca.edu.sv</string>
    <string name="name_result_template">Name: %1$s</string>
    <string name="age_result_template">Age: %1$s</string>
    <string name="email_result_template">Email: %1$s</string>
    <string name="human_resources_form_text">Human Resources Form</string>
</resources>