<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/default_gap"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:labelFor="@id/name_form_input"
        android:layout_marginBottom="@dimen/default_item_gap"
        android:text="@string/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name_form_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/e_g_douglas_text"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/default_gap"/>

    <TextView
        android:labelFor="@id/lastname_form_input"
        android:layout_marginBottom="@dimen/default_item_gap"
        android:text="@string/lastname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/lastname_form_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/e_g_hernandez_text"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/default_item_gap"/>

</LinearLayout>