<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/default_gap"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:labelFor="@id/age_form_input"
        android:layout_marginBottom="@dimen/default_item_gap"
        android:text="@string/age_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/age_form_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/e_g_23_text"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/default_gap"/>

    <TextView
        android:labelFor="@id/email_form_input"
        android:layout_marginBottom="@dimen/default_item_gap"
        android:text="@string/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/email_form_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/e_g_email_text"
        android:importantForAutofill="no"
        android:layout_marginBottom="@dimen/default_item_gap"/>

</LinearLayout>